# fpr

./: .gitignore  CMakeLists.txt  db.sql  main.cpp
data/: make_testset2.sh
data/bigpodcast/: download.sh
data/majak/: download.sh
data/podfm/: download.sh
data/svoboda/: download.sh
fpr/: complex.hpp  config.hpp  cqt.cpp  cqt.hpp  grid.cpp  grid.hpp  math.hpp  peculiarPoint.hpp  resultMaker.cpp  resultMaker.hpp  timeGrid.cpp  timeGrid.hpp  trajectorizer.cpp  trajectorizer.hpp  valueGrid.cpp  valueGrid.hpp  wavStore.cpp  wavStore.hpp
fpr/cqt/: level.cpp  level.hpp
fpr/trajectorizer/: line.cpp  line.hpp
src/: complex.hpp  math.hpp
src/classifier/: CMakeLists.txt  common.hpp  harmonicGenerator.cpp  harmonicGenerator.hpp  main.cpp  randomGenerator.cpp  randomGenerator.hpp  signal.cpp  signal.hpp  spectra.cpp  spectra.hpp
src/classifier/spectra/: level.cpp  level.hpp
src/fpr/: CMakeLists.txt  config.hpp  cqt.cpp  cqt.hpp  resultMaker.cpp  resultMaker.hpp  timeGrid.cpp  timeGrid.hpp  valueGrid.cpp  valueGrid.hpp
src/fpr-cli/: CMakeLists.txt  main.cpp
src/fpr/cqt/: level.cpp  level.hpp
src/mapping/: CMakeLists.txt  peer.hpp  solver.cpp  solver.hpp
src/mapping-cli/: CMakeLists.txt  main.cpp
src/utils/: CMakeLists.txt  wavStore.cpp  wavStore.hpp
voxforge/: download.sh  make_testset.sh  mk_8k.sh
